@@ -80,6 +80,7 @@ Fixed bugs
 - fixed bug in sepa_disjunctive: treat case that conflictgraph is empty
 - added safety check in conversion to rational number to avoid overflow
 - fixed bug in interval evaluation with power-operator in certain situations
+- fixed behavior of SCIPmatrixCreate() regarding memory management and column generation
 
 Miscellaneous
 -------------
